--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,9 @@ koin = "3.5.3"
 koin-compose = "1.1.2"
 
 napier = "2.7.1"
+navigation = "2.8.9"
+multidex = "2.0.1"
+materialIcons = "1.7.8"
 
 
 [libraries]
@@ -67,6 +70,13 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
+
+navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigation" }
+multidex = { module = "androidx.multidex:multidex", version.ref = "multidex" }
+
+material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
+
+
 
 
 [plugins]
