--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,15 +5,15 @@ coreKtx = "1.15.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.6.1"
-lifecycleRuntimeCompose = "2.7.0"
+lifecycleRuntimeKtx = "2.8.7"
+lifecycleRuntimeCompose = "2.8.7"
 
 activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 
 camerax = "1.5.0-alpha06"
-appcompat = "1.6.1"
-material = "1.10.0"
+appcompat = "1.7.0"
+material = "1.12.0"
 ktor = "3.1.0"
 
 kotlinx-datetime = "0.6.0-RC.2"
@@ -26,10 +26,9 @@ napier = "2.7.1"
 navigation = "2.8.9"
 multidex = "2.0.1"
 materialIcons = "1.7.8"
-
 kotlinSerializationPlugin = "1.9.22"
-
 coil = "2.2.2"
+room = "2.6.1"
 
 
 [libraries]
@@ -72,6 +71,11 @@ koin-androidx-compose-navigation = { module = "io.insert-koin:koin-androidx-comp
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
