--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,8 @@ coil = "2.2.2"
 room = "2.6.1"
 datastore = "1.1.4"
 
+exoPlayer = "1.6.0"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -96,6 +98,9 @@ splash-screen = { module = "androidx.core:core-splashscreen", version.ref = "spl
 
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 datastore-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
+
+media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "exoPlayer" }
+media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "exoPlayer" }
 
 
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
